// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser print statements parses print lists with no separator 1`] = `
Array [
  Print {
    "expressions": Array [
      Literal {
        "value": BrsString {
          "kind": 2,
          "value": "Foo",
        },
      },
      Literal {
        "value": BrsString {
          "kind": 2,
          "value": "bar",
        },
      },
      Literal {
        "value": BrsString {
          "kind": 2,
          "value": "baz",
        },
      },
    ],
    "tokens": Object {
      "print": Object {
        "isReserved": false,
        "kind": 71,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
    },
  },
]
`;

exports[`parser print statements parses print lists with separators 1`] = `
Array [
  Print {
    "expressions": Array [
      Literal {
        "value": BrsString {
          "kind": 2,
          "value": "Foo",
        },
      },
      Object {
        "isReserved": false,
        "kind": 30,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
      Literal {
        "value": BrsString {
          "kind": 2,
          "value": "bar",
        },
      },
      Object {
        "isReserved": false,
        "kind": 30,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
      Literal {
        "value": BrsString {
          "kind": 2,
          "value": "baz",
        },
      },
    ],
    "tokens": Object {
      "print": Object {
        "isReserved": false,
        "kind": 71,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
    },
  },
]
`;

exports[`parser print statements parses singular print statements 1`] = `
Array [
  Print {
    "expressions": Array [
      Literal {
        "value": undefined,
      },
    ],
    "tokens": Object {
      "print": Object {
        "isReserved": false,
        "kind": 71,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
    },
  },
]
`;
